--- a/index.html
+++ b/index.html
@@ -7,49 +7,126 @@
     <title>Online Education</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <style>
+        /* 
+        @media only screen and (max-width:991px) {
+            .carousel-item img {
+                width: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        } */
+
+        .carousel-item img {
+            filter: brightness(40%);
+        }
+    </style>
 </head>
 
 <body>
-    <header>
-        <!-- navbar section -->
+    <header class="container">
+        <!-- navbar section start -->
         <section>
             <nav class="navbar navbar-expand-lg">
-                <div class="container">
+                <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <h2>e-Education</h2>
+                        <h3 class="text-muted fs-2 "><strong>e-Education</strong></h3>
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler d-sm-" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold" href="#">Courses</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold" href="#">Deals</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold">Success</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fw-bold">Register</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <button class="btn btn-outline-info fw-bold">Register Now</button>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link me-4 active" aria-current="page" href="#">
+                                <b>Home</b>
+                            </a>
+                            <a class="nav-link me-4" href="#">
+                                <b>Courses</b>
+                            </a>
+                            <a class="nav-link me-4" href="#">
+                                <b>Deals</b>
+                            </a>
+                            <a class="nav-link me-4" href="#">
+                                <b>Success</b>
+                            </a>
+                            <a class="nav-link me-4" href="#">
+                                <b>About</b>
+                            </a>
+                            <a class="nav-link me-4" href="#">
+                                <b>Register</b>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                <button type="button" class="btn btn-outline-primary d-none d-sm-block d-md-none d-lg-block me-3">
+                    <b>Register</b>
+                </button>
             </nav>
+
         </section>
+        <!-- navbar section end -->
+        <!-- slider section start -->
+        <section class="my-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block mb-5">
+                            <h2 class="mb-3">Get Started Digital <br> Learning</h2>
+                            <p>
+                                It is a long established fact that a reader will be distracted by the readable
+                                content
+                                of a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-primary px-4">
+                                <b>Register</b>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block mb-5">
+                            <h2 class="mb-3">Get Started Digital <br> Learning</h2>
+                            <p>
+                                It is a long established fact that a reader will be distracted by the readable
+                                content
+                                of a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-primary px-4">
+                                <b>Register</b>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block mb-5">
+                            <h2 class="mb-3">Get Started Digital <br> Learning</h2>
+                            <p>
+                                It is a long established fact that a reader will be distracted by the readable
+                                content
+                                of a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-primary px-4">
+                                <b>Register</b>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider section end -->
     </header>
 
 
