--- a/index.html
+++ b/index.html
@@ -128,7 +128,60 @@
         </section>
         <!-- slider section end -->
     </header>
+    <main>
+        <!-- Course Section Start -->
+        <section class="container">
+            <div class="text-center w-50 mx-auto">
+                <h2>Discover Our Popular Courses</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+        </section>
+        <!-- Course Section End -->
 
+        <!-- registration start  -->
+        <section class="mb-5">
+            <div class="container bg-primary py-5 px-2 rounded">
+                <div class="d-flex justify-content-around align-items-center">
+                    <div class="col-lg-7 text-white">
+                        <h2>Ready to join?</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page when looking at its layout.</p>
+                    </div>
+                    <div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-light text-primary fw-bold" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Registration
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- registration end -->
+    </main>
 
 
 
