--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
-        /* 
-        @media only screen and (max-width:991px) {
-            .carousel-item img {
+        @media only screen and (max-width:768px) {
+            .course-image {
                 width: 100%;
-                object-fit: cover;
-                object-position: center;
             }
-        } */
+        }
 
         .carousel-item img {
             filter: brightness(40%);
@@ -73,7 +70,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-md-block mb-5">
+                        <div class="carousel-caption d-none d-md-block mb-5">
                             <h2 class="mb-3">Get Started Digital <br> Learning</h2>
                             <p>
                                 It is a long established fact that a reader will be distracted by the readable
@@ -87,7 +84,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-md-block mb-5">
+                        <div class="carousel-caption d-none d-md-block mb-5">
                             <h2 class="mb-3">Get Started Digital <br> Learning</h2>
                             <p>
                                 It is a long established fact that a reader will be distracted by the readable
@@ -101,7 +98,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-md-block mb-5">
+                        <div class="carousel-caption d-none d-md-block mb-5">
                             <h2 class="mb-3">Get Started Digital <br> Learning</h2>
                             <p>
                                 It is a long established fact that a reader will be distracted by the readable
@@ -130,48 +127,156 @@
     </header>
     <main>
         <!-- Course Section Start -->
-        <section class="container">
+        <section class="mb-5 container">
             <div class="text-center w-50 mx-auto">
                 <h2>Discover Our Popular Courses</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                     looking at its layout.</p>
             </div>
         </section>
+        <section class="container mb-5">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col col-lg-6 col-md-12">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-1.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-6 col-md-12">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-2.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Javascript Basic to advanced</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-6 col-md-12">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-3.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Fullstack Web Development</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-4.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Digital Marketing</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-5.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Photography Basic Rules</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="card">
+                        <div class="d-lg-flex d-md-flex justify-content-center align-items-center ">
+                            <div>
+                                <img src="images/course/course-6.png" class="course-image" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Motion Graphics</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h6 class="text-primary">Price : 20$</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 d-flex justify-content-center align-items-center">
+                <button class="btn btn-primary fw-bold px-3">See More Courses</button>
+            </div>
+        </section>
         <!-- Course Section End -->
 
         <!-- registration start  -->
-        <section class="mb-5">
+        <section class="container mb-5">
             <div class="container bg-primary py-5 px-2 rounded">
-                <div class="d-flex justify-content-around align-items-center">
-                    <div class="col-lg-7 text-white">
+                <div class="d-lg-flex justify-content-around align-items-center">
+                    <div class="col-lg-7 text-white ready-to-join">
                         <h2>Ready to join?</h2>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at its layout.</p>
                     </div>
                     <div>
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-light text-primary fw-bold" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            Registration
-                        </button>
 
+                        <!-- Button trigger modal -->
+                        <div class="d-grid col-4 mx-auto">
+                            <button class="btn bg-white text-primary fw-bold" type="button" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">Registration</button>
+                        </div>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Thank you</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        ...
+                                        You will get a Message soon
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <button type="button" class="btn btn-primary">Okay</button>
                                     </div>
                                 </div>
                             </div>
