student section added

--- a/index.html
+++ b/index.html
@@ -286,6 +286,59 @@
             </div>
         </section>
         <!-- registration end -->
+
+        <!-- meet successfull student start -->
+        <section class="container mb-5">
+            <div class="w-50 mx-auto text-center">
+                <h2>Meet Our Successfull Students</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <img src="images/student/student-1.png" alt="">
+                            <div class="card-body">
+                                <h5>Maruf Hossain</h5>
+                                <p>UIUX Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <img src="images/student/student-2.png" alt="">
+                            <div class="card-body">
+                                <h5>Nishi Akter</h5>
+                                <p>Motion Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <img src="images/student/student-3.png" alt="">
+                            <div class="card-body">
+                                <h5>Al Amin Parvez</h5>
+                                <p>Graphic Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <img src="images/student/student-4.png" alt="">
+                            <div class="card-body">
+                                <h5>Jannatul Islam</h5>
+                                <p>Motion Design</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 d-flex justify-content-center align-items-center">
+                <button class="btn btn-primary fw-bold px-3">View All</button>
+            </div>
+        </section>
+        <!-- meet successfull student end -->
     </main>
 
 
