company Section Added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         .icons {
             color: gold;
         }
+
+        .company-image img {
+            width: 80%;
+        }
     </style>
 </head>
 
@@ -583,6 +587,46 @@
             </article>
         </section>
         <!-- Frequently Asked Questions End -->
+
+        <!-- Comapnies Section Start -->
+        <section class="container d-none d-lg-block">
+            <div class="text-center">
+                <h1>Trusted by over 800+ companies</h1>
+            </div>
+            <article class="d-flex justify-content-evenly align-items-center mt-5">
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-1.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-3.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-4.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-5.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="" class="company-image">
+                        <img src="images/company/company-6.png" alt="">
+                    </a>
+                </div>
+            </article>
+        </section>
+        <!-- Comapnies Section End -->
     </main>
     <!-- <footer>
         <section>
