--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Online Education</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/f3d51a81b3.js" crossorigin="anonymous"></script>
     <style>
         @media only screen and (max-width:768px) {
             .course-image {
@@ -31,6 +32,10 @@
 
         .company-image img {
             width: 80%;
+        }
+
+        .social-icons a {
+            text-decoration: none;
         }
     </style>
 </head>
@@ -628,11 +633,36 @@
         </section>
         <!-- Comapnies Section End -->
     </main>
-    <!-- <footer>
-        <section>
-            
+    <footer class="bg-dark p-5 mt-5">
+        <section class="text-center text-white">
+            <h2>e-Education</h2>
+            <p>
+                <small>
+                    Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                    Sultanate of Oman
+                </small>
+            </p>
+            <p>
+                <a class="text-white" href="">Privacy Ploicy</a>
+                |
+                <a class="text-white" href="">Terms of use</a>
+            </p>
+            <div class="social-icons">
+                <a href="" class="mx-3 fs-2">
+                    <i class="fa-brands fa-facebook text-white"></i>
+                </a>
+                <a href="" class="mx-3 fs-2">
+                    <i class="fa-brands fa-twitter text-white"></i>
+                </a>
+                <a href="" class="mx-3 fs-2">
+                    <i class="fa-brands fa-linkedin-in text-white"></i>
+                </a>
+                <a href=" " class="mx-3 fs-2">
+                    <i class="fa-brands fa-instagram text-white"></i>
+                </a>
+            </div>
         </section>
-    </footer> -->
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
